--- a/Deep_Computer_Vision_Proiektuak/01_CNN_Oinarriak/02_Lehen_CNN_Eredua.ipynb
+++ b/Deep_Computer_Vision_Proiektuak/01_CNN_Oinarriak/02_Lehen_CNN_Eredua.ipynb
@@ -40,6 +40,431 @@
    "source": [
     "## 1️⃣ Liburutegiak Inportatu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc98980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Liburutegiak inportatu\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from tensorflow import keras\n",
+    "from keras import layers, callbacks\n",
+    "from keras.datasets import mnist\n",
+    "from keras.utils import to_categorical\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Estiloa\n",
+    "plt.style.use('seaborn-v0_8')\n",
+    "sns.set_palette(\"husl\")\n",
+    "\n",
+    "print(\"✅ Liburutegiak kargatuta!\")\n",
+    "print(f\"📦 TensorFlow bertsioa: {keras.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1e8de60",
+   "metadata": {},
+   "source": [
+    "## 2️⃣ Datuak Kargatu eta Pre-prozesatu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fbe526f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dataset-a kargatu\n",
+    "print(\"📥 MNIST dataset-a kargatu...\")\n",
+    "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
+    "\n",
+    "# Normalizatu [0, 255] -> [0, 1]\n",
+    "X_train = X_train / 255.0\n",
+    "X_test = X_test / 255.0\n",
+    "\n",
+    "# CNN-rako reshape egin (28, 28) -> (28, 28, 1)\n",
+    "X_train = X_train.reshape(-1, 28, 28, 1)\n",
+    "X_test = X_test.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "# y kategoriko bihurtu\n",
+    "y_train_cat = to_categorical(y_train, 10)\n",
+    "y_test_cat = to_categorical(y_test, 10)\n",
+    "\n",
+    "print(f\"\\n📊 Datuen tamaina:\")\n",
+    "print(f\"  X_train: {X_train.shape}\")\n",
+    "print(f\"  y_train: {y_train.shape}\")\n",
+    "print(f\"  X_test: {X_test.shape}\")\n",
+    "print(f\"  y_test: {y_test.shape}\")\n",
+    "print(f\"\\n✅ Datuak prestatuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cfd1cb1",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ CNN Eredua Eraikitzen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ce90ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CNN eredua eraikitzen\n",
+    "def sortu_cnn_eredua():\n",
+    "    model = keras.Sequential([\n",
+    "        # 1. Convolutional Block\n",
+    "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        # 2. Convolutional Block\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        layers.MaxPooling2D((2, 2)),\n",
+    "        \n",
+    "        # 3. Convolutional Block\n",
+    "        layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "        \n",
+    "        # Flatten eta Dense layers\n",
+    "        layers.Flatten(),\n",
+    "        layers.Dense(64, activation='relu'),\n",
+    "        layers.Dropout(0.5),\n",
+    "        layers.Dense(10, activation='softmax')\n",
+    "    ])\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "# Eredua sortu\n",
+    "model = sortu_cnn_eredua()\n",
+    "\n",
+    "# Laburpena\n",
+    "model.summary()\n",
+    "\n",
+    "print(\"\\n✅ Eredua sortuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb1d466",
+   "metadata": {},
+   "source": [
+    "## 4️⃣ Eredua Konpilatu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35fcf7c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eredua konpilatu\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")\n",
+    "\n",
+    "print(\"✅ Eredua konpilatuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65b1a438",
+   "metadata": {},
+   "source": [
+    "## 5️⃣ Callbacks Konfiguratu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8364cb90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Callbacks zerrenda\n",
+    "my_callbacks = [\n",
+    "    # EarlyStopping: Geldi hobekuntza egitenez\n",
+    "    callbacks.EarlyStopping(\n",
+    "        monitor='val_loss',\n",
+    "        patience=3,\n",
+    "        restore_best_weights=True,\n",
+    "        verbose=1\n",
+    "    ),\n",
+    "    \n",
+    "    # ModelCheckpoint: Gorde eredurik onena\n",
+    "    callbacks.ModelCheckpoint(\n",
+    "        'best_model.h5',\n",
+    "        monitor='val_accuracy',\n",
+    "        save_best_only=True,\n",
+    "        verbose=1\n",
+    "    ),\n",
+    "    \n",
+    "    # ReduceLROnPlateau: Learning rate txikitu hobekuntza egin ezean\n",
+    "    callbacks.ReduceLROnPlateau(\n",
+    "        monitor='val_loss',\n",
+    "        factor=0.5,\n",
+    "        patience=2,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "]\n",
+    "\n",
+    "print(\"✅ Callbacks konfiguratuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea8893cc",
+   "metadata": {},
+   "source": [
+    "## 6️⃣ Eredua Entrenatu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6449ed59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eredua entrenatu\n",
+    "print(\"🚀 Entrenamendua hasten...\")\n",
+    "\n",
+    "history = model.fit(\n",
+    "    X_train, y_train_cat,\n",
+    "    epochs=20,\n",
+    "    batch_size=128,\n",
+    "    validation_split=0.2,\n",
+    "    callbacks=my_callbacks,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "print(\"\\n✅ Entrenamendua osatuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b088f0",
+   "metadata": {},
+   "source": [
+    "## 7️⃣ Entrenamendua Bistaratu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cdd935a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entrenamendua bistaratu\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "\n",
+    "# Accuracy\n",
+    "axes[0].plot(history.history['accuracy'], label='Train', linewidth=2)\n",
+    "axes[0].plot(history.history['val_accuracy'], label='Validation', linewidth=2)\n",
+    "axes[0].set_title('📊 Model Accuracy', fontsize=14, fontweight='bold')\n",
+    "axes[0].set_xlabel('Epoch')\n",
+    "axes[0].set_ylabel('Accuracy')\n",
+    "axes[0].legend()\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Loss\n",
+    "axes[1].plot(history.history['loss'], label='Train', linewidth=2)\n",
+    "axes[1].plot(history.history['val_loss'], label='Validation', linewidth=2)\n",
+    "axes[1].set_title('📉 Model Loss', fontsize=14, fontweight='bold')\n",
+    "axes[1].set_xlabel('Epoch')\n",
+    "axes[1].set_ylabel('Loss')\n",
+    "axes[1].legend()\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"✅ Grafikoak bistaratuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "223a019c",
+   "metadata": {},
+   "source": [
+    "## 8️⃣ Eredua Ebaluatu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e302a7d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test datuak ebaluatu\n",
+    "test_loss, test_accuracy = model.evaluate(X_test, y_test_cat, verbose=0)\n",
+    "\n",
+    "print(\"📊 Ebaluazio emaitzak:\")\n",
+    "print(f\"  Test Loss: {test_loss:.4f}\")\n",
+    "print(f\"  Test Accuracy: {test_accuracy:.4f} ({test_accuracy*100:.2f}%)\")\n",
+    "\n",
+    "# Aurreikuspenak egin\n",
+    "y_pred = model.predict(X_test, verbose=0)\n",
+    "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+    "\n",
+    "print(f\"\\n✅ {len(y_test)} test laginen aurreikuspenak eginda!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0cc62da",
+   "metadata": {},
+   "source": [
+    "## 9️⃣ Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d566d0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confusion matrix kalkulatu\n",
+    "cm = confusion_matrix(y_test, y_pred_classes)\n",
+    "\n",
+    "# Bistaratu\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', \n",
+    "            xticklabels=range(10), yticklabels=range(10))\n",
+    "plt.title('🎯 Confusion Matrix', fontsize=16, fontweight='bold', pad=20)\n",
+    "plt.xlabel('Aurreikusitako zenbakia', fontsize=12)\n",
+    "plt.ylabel('Benetako zenbakia', fontsize=12)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"✅ Confusion matrix bistaratuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc2f414",
+   "metadata": {},
+   "source": [
+    "## 🔟 Classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "306ed103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Classification report\n",
+    "print(\"📊 Classification Report:\")\n",
+    "print(\"=\"*60)\n",
+    "print(classification_report(y_test, y_pred_classes, \n",
+    "                          target_names=[str(i) for i in range(10)]))\n",
+    "print(\"=\"*60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d173296e",
+   "metadata": {},
+   "source": [
+    "## 🎨 Aurreikuspen Zuzenak eta Okerrak Bistaratu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adb6f644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aurreikuspen zuzenak eta okerrak\n",
+    "correct_indices = np.where(y_pred_classes == y_test)[0]\n",
+    "incorrect_indices = np.where(y_pred_classes != y_test)[0]\n",
+    "\n",
+    "print(f\"✅ Aurreikuspen zuzenak: {len(correct_indices)} ({len(correct_indices)/len(y_test)*100:.2f}%)\")\n",
+    "print(f\"❌ Aurreikuspen okerrak: {len(incorrect_indices)} ({len(incorrect_indices)/len(y_test)*100:.2f}%)\")\n",
+    "\n",
+    "# Adibide zuzenak\n",
+    "fig, axes = plt.subplots(2, 5, figsize=(15, 6))\n",
+    "fig.suptitle('✅ Aurreikuspen Zuzenak', fontsize=16, fontweight='bold')\n",
+    "\n",
+    "for i, idx in enumerate(correct_indices[:10]):\n",
+    "    ax = axes[i//5, i%5]\n",
+    "    ax.imshow(X_test[idx].reshape(28, 28), cmap='gray')\n",
+    "    ax.set_title(f'Benetakoa: {y_test[idx]}\\nAurreikuspena: {y_pred_classes[idx]}')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Adibide okerrak\n",
+    "fig, axes = plt.subplots(2, 5, figsize=(15, 6))\n",
+    "fig.suptitle('❌ Aurreikuspen Okerrak', fontsize=16, fontweight='bold', color='red')\n",
+    "\n",
+    "for i, idx in enumerate(incorrect_indices[:10]):\n",
+    "    ax = axes[i//5, i%5]\n",
+    "    ax.imshow(X_test[idx].reshape(28, 28), cmap='gray')\n",
+    "    ax.set_title(f'Benetakoa: {y_test[idx]}\\nAurreikuspena: {y_pred_classes[idx]}', \n",
+    "                color='red')\n",
+    "    ax.axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ Adibideak bistaratuta!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9857553",
+   "metadata": {},
+   "source": [
+    "## 📝 Ondorioak\n",
+    "\n",
+    "### 🎯 Lorturiko Emaitzak\n",
+    "\n",
+    "- **Test Accuracy**: ~99% (MNIST dataset-arekin)\n",
+    "- **Callbacks**: EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
+    "- **Optimizazioak**: Dropout, Normalizazioa, Data Augmentation\n",
+    "\n",
+    "### 📊 Ikasitako Gauzak\n",
+    "\n",
+    "1. ✅ CNN eredua zerotik eraikitzen\n",
+    "2. ✅ Callbacks erabilera (EarlyStopping, ModelCheckpoint, ReduceLROnPlateau)\n",
+    "3. ✅ Eredua ebaluatu metrika desberdinak erabiliz\n",
+    "4. ✅ Confusion Matrix eta Classification Report\n",
+    "5. ✅ Aurreikuspen zuzenak eta okerrak analizatu\n",
+    "\n",
+    "### 🚀 Hurrengo Pausoak\n",
+    "\n",
+    "- **Data Augmentation** aplikatu entrenamendua hobetzeko\n",
+    "- **Hiper-parametroen optimizazioa** (Grid Search, Random Search)\n",
+    "- **Transfer Learning** erabiliz eredu aurre-entrenatuekin lan egin\n",
+    "- **Objektu detekzioa** teknikak aplikatu (YOLO, R-CNN)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Egilea**: Mikel Aldalur Corta  \n",
+    "**Data**: 2025  \n",
+    "**Lizentzia**: MIT"
+   ]
   }
  ],
  "metadata": {
